kprofile-action-main/kubernetes/vpro-app/kproappdep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kproapp
  labels: 
    app: kproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kproapp
  template:
    metadata:
      labels:
        app: kproapp
    spec:
      containers:
      - name: kproapp
        image: kprofile/kprofileapp
        ports:
        - name: kproapp-port
          containerPort: 8080
