kprofile-action-main/kubernetes/vpro-app/kprodbdep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kprodb
  labels:
    app: kprodb
spec:
  selector:
    matchLabels:
      app: kprodb
  replicas: 1
  template:
    metadata:
      labels:
        app: kprodb
    spec:
      containers:
      - name: kprodb
        image: kprofile/kprofiledb 
        ports:
        - name: kprodb-port
          containerPort: 3306
