kprofile-action-main/kubernetes/vpro-app/rmq-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpromq01
  labels:
    app: kpromq01
spec:
  selector:
    matchLabels:
      app: kpromq01
  replicas: 1
  template:
    metadata:
      labels:
        app: kpromq01
    spec:
      containers:
      - name: kpromq01
        image: rabbitmq
        ports:
        - name: kpromq01-port
          containerPort: 15672
