kprofile-action-main/kubernetes/vpro-app/mc-CIP.yml
apiVersion: v1
kind: Service
metadata:
  name: kprocache01
spec:
  ports:
  - port: 11211
    targetPort: kpromc-port
    protocol: TCP
  selector:
    app: kpromc 
  type: ClusterIP
