kprofile-action-main/kubernetes/vpro-app/rmq-CIP-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kpromq01
spec:
  ports:
  - port: 5672
    targetPort: kpromq01-port
    protocol: TCP
  selector:
    app: kpromq01
  type: ClusterIP
